--- a/tests/DotNet.CodeCoverage.BitbucketPipe.Tests/DotNet.CodeCoverage.BitbucketPipe.Tests.csproj
+++ b/tests/DotNet.CodeCoverage.BitbucketPipe.Tests/DotNet.CodeCoverage.BitbucketPipe.Tests.csproj
@@ -1,20 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="coverlet.collector" Version="3.0.2">
+        <PackageReference Include="coverlet.collector" Version="3.0.3">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="JunitXml.TestLogger" Version="2.1.81" />
-        <PackageReference Include="Moq" Version="4.16.0" />
-        <PackageReference Include="nunit" Version="3.13.0" />
-        <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
+        <PackageReference Include="JunitXml.TestLogger" Version="3.0.98" />
+        <PackageReference Include="Moq" Version="4.16.1" />
+        <PackageReference Include="nunit" Version="3.13.2" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
     </ItemGroup>
 
     <ItemGroup>
