--- a/src/ReportGenerator.BitbucketPipe/ReportGenerator.BitbucketPipe.csproj
+++ b/src/ReportGenerator.BitbucketPipe/ReportGenerator.BitbucketPipe.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Macross.Json.Extensions" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
+    <PackageReference Include="ReportGenerator.Core" Version="4.8.9" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
   </ItemGroup>
