--- a/tests/ReportGenerator.BitbucketPipe.Tests/ReportGenerator.BitbucketPipe.Tests.csproj
+++ b/tests/ReportGenerator.BitbucketPipe.Tests/ReportGenerator.BitbucketPipe.Tests.csproj
@@ -1,24 +1,29 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
-        <IsPackable>false</IsPackable>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net5.0</TargetFramework>
+    <IsPackable>false</IsPackable>
+  </PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="coverlet.collector" Version="3.0.3">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="JunitXml.TestLogger" Version="3.0.98" />
-        <PackageReference Include="Moq" Version="4.16.1" />
-        <PackageReference Include="nunit" Version="3.13.2" />
-        <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="coverlet.collector" Version="3.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="FluentAssertions" Version="5.10.3"/>
+    <PackageReference Include="JunitXml.TestLogger" Version="3.0.98"/>
+    <PackageReference Include="Moq" Version="4.16.1"/>
+    <PackageReference Include="nunit" Version="3.13.2"/>
+    <PackageReference Include="NUnit3TestAdapter" Version="4.0.0"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0"/>
+  </ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\..\src\ReportGenerator.BitbucketPipe\ReportGenerator.BitbucketPipe.csproj" />
-    </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\ReportGenerator.BitbucketPipe\ReportGenerator.BitbucketPipe.csproj"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="ExampleCoverageTestResults/**" CopyToOutputDirectory="PreserveNewest"/>
+  </ItemGroup>
 
 </Project>
