chore: disable build for inspectcode

--- a/inspectcode.config
+++ b/inspectcode.config
@@ -18,7 +18,5 @@
   <IncludedProjects />
   <DumpIssuesTypes>false</DumpIssuesTypes>
   <MinSeverity>WARNING</MinSeverity>
-  <ExcludedFiles>
-    <ExcludedFiles>*.js</ExcludedFiles>
-  </ExcludedFiles>
+  <Build>false</Build>
 </InspectCodeOptions>
