--- a/tests/ReportGenerator.BitbucketPipe.Tests/ReportGenerator.BitbucketPipe.Tests.csproj
+++ b/tests/ReportGenerator.BitbucketPipe.Tests/ReportGenerator.BitbucketPipe.Tests.csproj
@@ -12,7 +12,11 @@
     </PackageReference>
     <PackageReference Include="FluentAssertions" Version="6.11.0"/>
     <PackageReference Include="JunitXml.TestLogger" Version="3.0.134"/>
-    <PackageReference Include="Moq" Version="4.18.4"/>
+    <PackageReference Include="NSubstitute" Version="5.0.0"/>
+    <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.16">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="nunit" Version="3.13.3"/>
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0"/>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.0"/>
